force-app/main/default/objects/LINE_Chat_Template__mdt/LINE_Chat_Template__mdt.object-meta.xml
<CustomObject>
    <description
  >Ready-made messages agents can pick in the LINE chat. {Name} is replaced with the customer's name.</description>
    <label>LINE Chat Template</label>
    <pluralLabel>LINE Chat Templates</pluralLabel>
</CustomObject>