force-app/main/default/objects/LINE_Chat_Template__mdt/fields/Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Applies_To__c</fullName>
    <description>Which record pages show this template.</description>
    <label>Applies To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>All</fullName><default>true</default><label
        >All</label></value>
            <value><fullName>Lead</fullName><default>false</default><label
        >Lead</label></value>
            <value><fullName>Account</fullName><default>false</default><label
        >Account</label></value>
            <value><fullName>Case</fullName><default>false</default><label
        >Case</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>