force-app/main/default/objects/LINE_Chat_Template__mdt/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description
  >Message text. Use {Name} for the customer&apos;s name.</description>
    <label>Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>